--- a/Dockerfile.consumer
+++ b/Dockerfile.consumer
@@ -3,7 +3,7 @@ RUN apt-get update && apt-get install -y liblz4-dev dpkg-dev
 WORKDIR /app
 COPY shard.yml shard.lock ./
 RUN shards install --production
-RUN apt-get update && apt-get install -y libgcc-s1 libstdc++6 net-tools && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y libgcc-s1 libstdc++6 net-tools && apt install -y sqlite3 libsqlite3-dev && rm -rf /var/lib/apt/lists/*
 
 # Copy the rest of the application code
 COPY . .
@@ -45,6 +45,8 @@ RUN tar -xf ./linux-${LINUX_VERSION}.tar.xz \
     && make -C . && make NO_LIBTRACEEVENT=1 NO_LIBBABELTRACE=1 NO_LIBPFM=1 NO_LIBUNWIND=1 NO_SLANG=1 NO_LIBPYTHON=1 NO_PERL=1 NO_LIBBPF=1 NO_NUMA=1 NO_JAVA=1 \
     && cp perf /usr/bin/perf
 
+
+RUN apt install -y libsqlite3-dev sqlite3
 
 # Copy the built binary from builder
 COPY --from=builder /app/bin/consumer ./consumer
