--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     build: .
     hostname: app1
     privileged: true
+    restart: unless-stopped
     cap_add:
       - SYS_ADMIN
       - SYS_PTRACE
@@ -14,14 +15,15 @@ services:
       - /sys:/host/sys:ro
       - ./profiling-data:/app/profiling-data
     environment:
-      MONGO_URI: "mongodb://mongo:27017/challenge?w=0&j=false"
       PROCESSOR_URL: "http://payment-processor-default:8080"
       FALLBACK_URL: "http://payment-processor-fallback:8080"
-      CIRCUIT_BREAKER_THRESHOLD: "5"
-      CIRCUIT_BREAKER_TIMEWINDOW: "15"
-      CIRCUIT_BREAKER_REENABLE_AFTER: "5"
-      SKIP_BATCH: "true"
+      DISABLE_LOG: "true"
+      SQLITE_PATH: "/dev/shm/database.sqlite3?sync=off&journal_mode=WAL&busy_timeout=1000"
       AMQP_URL: "amqp://guest:guest@lavinmq:5672/"
+      BATCH_INTERVAL: "5"
+      SKIP_DELAY: "true"
+      PREFETCH_COUNT: "0"
+      SHARD_COUNT: "4"
     networks:
       - backend
       - payment-processor
@@ -30,9 +32,7 @@ services:
     depends_on:
       lavinmq:
         condition: service_healthy
-      mongo:
-        condition: service_healthy
-
+    ipc: host
     ulimits:
       nproc: 1000000
       nofile:
@@ -41,25 +41,32 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.1'
+          cpus: '0.15'
           memory: '20MB'
   app2:
     <<: *app
     hostname: app2
 
-  consumer:
+  consumer: &consumer
     <<: *app
-    hostname: consumer
+    hostname: "1"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: '25MB'
     build:
       context: .
       dockerfile: Dockerfile.consumer
-
   consumer2:
-    <<: *app
-    hostname: consumer2
-    build:
-      context: .
-      dockerfile: Dockerfile.consumer
+    <<: *consumer
+    hostname: "2"
+  consumer3:
+    <<: *consumer
+    hostname: "3"
+  consumer4:
+    <<: *consumer
+    hostname: "4"
 
   lavinmq:
     image: cloudamqp/lavinmq:latest
@@ -80,47 +87,6 @@ services:
         limits:
           cpus: '0.1'
           memory: '35MB'
-
-  # nettools:
-  #   image: alpine:latest
-  #   container_name: nettools
-  #   command: /bin/sh -c "apk add --no-cache curl busybox-extras bind-tools iproute2 && sh"
-  #   tty: true
-  #   stdin_open: true
-  #   networks:
-  #     - backend
-  #     - payment-processor
-  #   depends_on:
-  #     - app1
-  #     - app2
-  #   environment: {}
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         cpus: '0.05'
-  #         memory: '200MB'
-  #   # You can exec into this container and use curl, ping, traceroute, telnet, dig, etc.
-  #   # Example: docker-compose exec nettools sh
-  #   # Then: curl http://app1:3000
-
-  mongo:
-    image: mongo:8.0
-    container_name: mongo
-    ports:
-      - 27017:27017
-    healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 10s
-      timeout: 5s
-      retries: 20
-      start_period: 2s
-    networks:
-      - backend
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: '150MB'
 
   nginx: # Load Balancer
     image: nginx:latest
