--- a/shard.yml
+++ b/shard.yml
@@ -14,18 +14,12 @@ dependencies:
   kemal:
     github: kemalcr/kemal
     version: ~> 1.7.0
-  cryomongo:
-    github: elbywan/cryomongo
-    version: ~> 0.3.0
-  circuit_breaker:
-    github: TPei/circuit_breaker
-    version: ~> 0.0.6
   sqlite3:
     github: crystal-lang/crystal-sqlite3
     version: ~> 0.21.0
   amqp-client:
-    github: crystal-lang/crystal-amqp
-    version: ~> 0.1.0
+    github: cloudamqp/amqp-client.cr
+    version: 1.3.1
 
 crystal: 1.0.0
 
