--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           target: app
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app:latest
@@ -42,7 +42,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           target: worker
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-worker:latest
