--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,6 @@
 name: k6 Test
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -15,9 +12,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        name: Set up Docker Compose
+
+      - name: Set up Docker Compose
         uses: docker/setup-compose-action@v1
-      
 
       - name: Download Environment
         run: |  
