--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,7 +56,7 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: mshick/add-pr-comment@v2
         with:
-          file: partial-results.json
+          message-path: partial-results.json
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Tear down services
