--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   k6-test:
     runs-on: ubuntu-latest
+    permissions: write-all
 
     steps:
       - name: Checkout code
@@ -50,7 +51,7 @@ jobs:
       - uses: grafana/setup-k6-action@v1
 
       - name: Run k6 test
-        run: k6 run rinha.js
+        run: k6 -q run rinha.js
 
       - name: Comment PR with partial-results.json
         if: github.event_name == 'pull_request'
