--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,8 +22,7 @@ services:
       DISABLE_LOG: "true"
       SQLITE_PATH: "/dev/shm/database.sqlite3?sync=off&journal_mode=WAL&busy_timeout=1000"
       AMQP_URL: "amqp://guest:guest@lavinmq:5672/"
-      BATCH_INTERVAL: "5"
-      SKIP_DELAY: "true"
+      BATCH_INTERVAL: "50"
       PREFETCH_COUNT: "0"
       SHARD_COUNT: "4"
     networks:
@@ -43,11 +42,14 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.15'
+          cpus: '0.1'
           memory: '20MB'
   app2:
     <<: *app
     hostname: app2
+  app3:
+    <<: *app
+    hostname: app3
 
   consumer: &consumer
     <<: *app
@@ -56,7 +58,7 @@ services:
       resources:
         limits:
           cpus: '0.25'
-          memory: '25MB'
+          memory: '35MB'
     build:
       context: .
       target: worker
@@ -110,7 +112,7 @@ services:
       resources:
         limits:
           cpus: '0.1'
-          memory: '35MB'
+          memory: '25MB'
 
 networks:
   backend:
