--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
       AMQP_URL: "amqp://guest:guest@lavinmq:5672/"
       BATCH_INTERVAL: "50"
       PREFETCH_COUNT: "0"
-      SHARD_COUNT: "4"
+      SHARD_COUNT: "5"
       SKIP_DELAY: "true"
     networks:
       - backend
@@ -44,7 +44,7 @@ services:
       resources:
         limits:
           cpus: '0.1'
-          memory: '35MB'
+          memory: '30MB'
   app2:
     <<: *app
     hostname: app2
@@ -59,7 +59,7 @@ services:
       resources:
         limits:
           cpus: '0.25'
-          memory: '45MB'
+          memory: '35MB'
     build:
       context: .
       target: worker
@@ -72,6 +72,9 @@ services:
   consumer4:
     <<: *consumer
     hostname: "4"
+  consumer5:
+    <<: *consumer
+    hostname: "5"
 
   lavinmq:
     image: cloudamqp/lavinmq:latest
