--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Generate tag from SHA and timestamp
+        id: gen_tag
+        run: |
+          SHA_SHORT=$(echo $GITHUB_SHA | cut -c1-9)
+          TS_SHORT=$(date +%s)
+          TAG="main-${SHA_SHORT}-${TS_SHORT}"
+          echo "TAG=$TAG" >> $GITHUB_ENV
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+
+
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
@@ -33,7 +43,7 @@ jobs:
           platforms: linux/amd64
           target: app
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app:latest
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app:latest, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-app:${{ steps.gen_tag.outputs.tag }}
 
       - name: Build and push consumer image (Dockerfile.consumer)
         uses: docker/build-push-action@v5
@@ -42,4 +52,4 @@ jobs:
           platforms: linux/amd64
           target: worker
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-worker:latest
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-worker:latest, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-worker:${{ steps.gen_tag.outputs.tag }}
