--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,30 +1,20 @@
 version: '3.4'
 services:
   app1: &app
-    # image: lukas8219/rinha-be-2023-q3:latest
     build:
       context: .
       target: app
     hostname: app1
-    privileged: true
     restart: unless-stopped
-    cap_add:
-      - SYS_ADMIN
-      - SYS_PTRACE
-    volumes:
-      - /sys/kernel/debug:/sys/kernel/debug:ro
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - ./profiling-data:/app/profiling-data
     environment:
       PROCESSOR_URL: "http://payment-processor-default:8080"
       FALLBACK_URL: "http://payment-processor-fallback:8080"
       DISABLE_LOG: "true"
-      SQLITE_PATH: "/dev/shm/database.sqlite3?sync=off&journal_mode=WAL&busy_timeout=1000"
+      POSTGRES_URL: "postgres://postgres:postgres@postgres:5432/rinha"
       AMQP_URL: "amqp://guest:guest@lavinmq:5672/"
       BATCH_INTERVAL: "50"
       PREFETCH_COUNT: "0"
-      SHARD_COUNT: "5"
+      SHARD_COUNT: "3"
       SKIP_DELAY: "true"
     networks:
       - backend
@@ -34,7 +24,8 @@ services:
     depends_on:
       lavinmq:
         condition: service_healthy
-    ipc: host
+      postgres:
+        condition: service_healthy
     ulimits:
       nproc: 1000000
       nofile:
@@ -69,12 +60,31 @@ services:
   consumer3:
     <<: *consumer
     hostname: "3"
-  consumer4:
-    <<: *consumer
-    hostname: "4"
-  consumer5:
-    <<: *consumer
-    hostname: "5"
+  
+  postgres:
+    image: postgres:15-alpine
+    container_name: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: rinha
+    ports:
+      - "5432:5432"
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+    volumes:
+      - type: tmpfs
+        target: /var/lib/postgresql/data
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: '60MB'
 
   lavinmq:
     image: cloudamqp/lavinmq:latest
