--- a/shard.yml
+++ b/shard.yml
@@ -20,6 +20,8 @@ dependencies:
   amqp-client:
     github: cloudamqp/amqp-client.cr
     version: 1.3.1
+  pg:
+    github: will/crystal-pg
 
 crystal: 1.0.0
 
