--- a/nginx.conf
+++ b/nginx.conf
@@ -11,9 +11,9 @@ http {
     error_log /dev/null emerg;
 
     upstream api {
-        server app1:3000;
-        server app2:3000;
-        server app3:3000;
+        server unix:/dev/shm/app1.sock;
+        server unix:/dev/shm/app2.sock;
+        server unix:/dev/shm/app3.sock;
         keepalive 200;
     }
 
