--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 x-enviromments: &x-enviromments
-  - SQLITE_PATH: "/dev/shm/database.sqlite3?sync=off&journal_mode=WAL&busy_timeout=1000&cache_size=100000"
+  - SQLITE_PATH: "/dev/shm/database.sqlite3?sync=off&journal_mode=WAL&busy_timeout=1000&cache_size=-100000"
   - AMQP_URL: "amqp://guest:guest@lavinmq:5672/"
   - BATCH_INTERVAL: "50"
   - PREFETCH_COUNT: "0"
@@ -7,7 +7,7 @@ x-enviromments: &x-enviromments
   - SKIP_DELAY: "true"
   - PROCESSOR_URL: "http://payment-processor-default:8080"
   - FALLBACK_URL: "http://payment-processor-fallback:8080"
-  - DISABLE_LOG: "true"
+  - CRYSTAL_LOG_LEVEL: "DEBUG"
 
 version: '3.4'
 services:
