Revert "[test] changed to single replica with more CPU"
This reverts commit 637a5902b30fd61b9a22a3bcd2fb2c190e063f6d.

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,7 @@ http {
     upstream api {
         server unix:/dev/shm/app1.sock;
         server unix:/dev/shm/app2.sock;
+        server unix:/dev/shm/app3.sock;
         keepalive 200;
     }
 
