--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ x-enviromments: &x-enviromments
   - AMQP_URL: "amqp://guest:guest@lavinmq:5672/"
   - BATCH_INTERVAL: "50"
   - PREFETCH_COUNT: "0"
-  - SHARD_COUNT: "1"
+  - SHARD_COUNT: "5"
   - SKIP_DELAY: "true"
   - PROCESSOR_URL: "http://payment-processor-default:8080"
   - FALLBACK_URL: "http://payment-processor-fallback:8080"
@@ -43,13 +43,19 @@ services:
       resources:
         limits:
           cpus: '0.1'
-          memory: '20MB'
+          memory: '30MB'
   app2:
     <<: *app
     environment:
       <<: *x-enviromments
       SOCKET_PATH: "/dev/shm/app2.sock"
     hostname: app2
+  app3:
+    <<: *app
+    environment:
+      <<: *x-enviromments
+      SOCKET_PATH: "/dev/shm/app3.sock"
+    hostname: app3
 
   consumer: &consumer
     <<: *app
@@ -57,11 +63,23 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1.1'
-          memory: '150MB'
+          cpus: '0.25'
+          memory: '35MB'
     build:
       context: .
       target: worker
+  consumer2:
+    <<: *consumer
+    hostname: "2"
+  consumer3:
+    <<: *consumer
+    hostname: "3"
+  consumer4:
+    <<: *consumer
+    hostname: "4"
+  consumer5:
+    <<: *consumer
+    hostname: "5"
 
   cleanup:
     image: alpine:latest
@@ -108,8 +126,13 @@ services:
     depends_on:
       - app1
       - app2
+      - app3
       - lavinmq
       - consumer
+      - consumer2
+      - consumer3
+      - consumer4
+      - consumer5
     ports:
       - "9999:9999"
     ulimits:
