--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,9 @@ http {
 
         location / {
             proxy_buffering off;
+            proxy_request_buffering off;
+            tcp_nodelay on;
+            sendfile on;
             proxy_set_header Connection "";
             proxy_http_version 1.1;
             proxy_set_header Keep-Alive "";
