single replica, better nginx, cached socket

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,13 +7,17 @@ events {
 }
 
 http {
-    access_log  off;
+    # access_log  off;
     error_log /dev/null emerg;
+
+    log_format timed '$remote_addr - $remote_user [$time_local] '
+                     '"$request" $status $body_bytes_sent '
+                     '$request_time $upstream_response_time $pipe';
+    access_log off;
 
     upstream api {
         server unix:/dev/shm/app1.sock;
         server unix:/dev/shm/app2.sock;
-        server unix:/dev/shm/app3.sock;
         keepalive 200;
     }
 
