--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,11 @@ http {
         keepalive 200;
     }
 
+    upstream consumer {
+        server unix:/dev/shm/1.sock;
+        keepalive 200;
+    }
+
     server {
         listen 9999;
 
@@ -34,6 +39,16 @@ http {
             proxy_set_header Keep-Alive "";
             proxy_set_header Proxy-Connection "keep-alive";
             proxy_pass http://api;
+        }
+
+        location /payments-summary {
+            proxy_buffering off;
+            proxy_request_buffering off;
+            tcp_nodelay on;
+            sendfile on;
+            proxy_set_header Connection "";
+            proxy_http_version 1.1;
+            proxy_pass http://consumer;
         }
     }
 }
