feat(skiplist): use skiplist instead of sqlite for performance (#17)
* [skiplist] started implementing skiplib

* [wip] started implementing skiplist in-memory

* [test] changed to single replica with more CPU

* Revert "[test] changed to single replica with more CPU"

This reverts commit 637a5902b30fd61b9a22a3bcd2fb2c190e063f6d.

* tuned a bit nginx conf

* single replica, better nginx, cached socket

* zeroed inconsistencies

* point directly to consumer via nginx unix socket

* revert "zero inconsistencies" to test 3ms issue

This reverts commit 6a3709349bf2ff8dd9993e682dff9ae0469a7dae.

* Revert "revert "zero inconsistencies" to test 3ms issue"

This reverts commit bedf5149f1b044689591d6197aa97ce2dc514703.

* [test] use native C binding to generate the JSON

* [test] verifying manual JSON generation

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ x-enviromments: &x-enviromments
   - AMQP_URL: "amqp://guest:guest@lavinmq:5672/"
   - BATCH_INTERVAL: "50"
   - PREFETCH_COUNT: "0"
-  - SHARD_COUNT: "5"
+  - SHARD_COUNT: "1"
   - SKIP_DELAY: "true"
   - PROCESSOR_URL: "http://payment-processor-default:8080"
   - FALLBACK_URL: "http://payment-processor-fallback:8080"
@@ -30,10 +30,12 @@ services:
       - payment-processor
     expose:
       - "3000"
+    ipc: host
     depends_on:
       lavinmq:
         condition: service_healthy
-    ipc: host
+      consumer:
+        condition: service_started
     ulimits:
       nproc: 1000000
       nofile:
@@ -42,20 +44,19 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.1'
-          memory: '30MB'
+          cpus: '0.20'
+          memory: '50MB'
   app2:
     <<: *app
     environment:
       <<: *x-enviromments
       SOCKET_PATH: "/dev/shm/app2.sock"
     hostname: app2
-  app3:
-    <<: *app
-    environment:
-      <<: *x-enviromments
-      SOCKET_PATH: "/dev/shm/app3.sock"
-    hostname: app3
+    depends_on:
+      lavinmq:
+        condition: service_healthy
+      consumer:
+        condition: service_started
 
   consumer: &consumer
     <<: *app
@@ -63,23 +64,29 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.25'
-          memory: '35MB'
+          cpus: '0.9'
+          memory: '150MB'
     build:
       context: .
       target: worker
-  consumer2:
-    <<: *consumer
-    hostname: "2"
-  consumer3:
-    <<: *consumer
-    hostname: "3"
-  consumer4:
-    <<: *consumer
-    hostname: "4"
-  consumer5:
-    <<: *consumer
-    hostname: "5"
+    depends_on:
+      lavinmq:
+        condition: service_healthy
+
+  cleanup:
+    image: alpine:latest
+    command: ["/bin/sh", "-c", "rm -rf /dev/shm/*"]
+    ipc: host
+    volumes:
+      - /dev/shm:/dev/shm
+    deploy:
+      resources:
+        limits:
+          cpus: '0.01'
+          memory: '10MB'
+    restart: "no"
+    networks:
+      - backend
 
   lavinmq:
     image: cloudamqp/lavinmq:latest
@@ -90,6 +97,8 @@ services:
       timeout: 10s
       retries: 20
       start_period: 5s
+    depends_on:
+      - cleanup
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -109,13 +118,8 @@ services:
     depends_on:
       - app1
       - app2
-      - app3
       - lavinmq
       - consumer
-      - consumer2
-      - consumer3
-      - consumer4
-      - consumer5
     ports:
       - "9999:9999"
     ulimits:
@@ -130,6 +134,16 @@ services:
         limits:
           cpus: '0.1'
           memory: '25MB'
+  
+  warmup:
+    image: curlimages/curl:latest
+    entrypoint: ["/bin/sh", "-c"]
+    command: |
+      curl --fail --max-time 5 http://nginx:9999/payments-summary || true
+    depends_on:
+      - nginx
+    networks:
+      - backend
 
 networks:
   backend:
