--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ http {
     }
 
     server {
-        listen 9999 backlog=1024 reuseport;
+        listen 9999;
 
         location / {
             proxy_buffering off;
@@ -46,7 +46,7 @@ http {
             proxy_request_buffering off;
             tcp_nodelay on;
             sendfile on;
-            proxy_set_header Connection "keep-alive";
+            proxy_set_header Connection "";
             proxy_http_version 1.1;
             proxy_pass http://consumer;
         }
