--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,10 +61,14 @@ services:
   consumer: &consumer
     <<: *app
     hostname: "1"
+    cpu_shares: 3072
     deploy:
       resources:
         limits:
           cpus: '0.9'
+          memory: '150MB'
+        reservations:
+          cpus: '0.01'
           memory: '150MB'
     build:
       context: .
@@ -82,6 +86,9 @@ services:
     deploy:
       resources:
         limits:
+          cpus: '0.01'
+          memory: '10MB'
+        reservations:
           cpus: '0.01'
           memory: '10MB'
     restart: "no"
@@ -109,6 +116,9 @@ services:
         limits:
           cpus: '0.1'
           memory: '35MB'
+        reservations:
+          cpus: '0.01'
+          memory: '35MB'
 
   nginx: # Load Balancer
     ipc: host
@@ -129,11 +139,15 @@ services:
         hard: 1000000
     networks:
       - backend
+    cpu_shares: 2048
     deploy:
       resources:
         limits:
           cpus: '0.1'
-          memory: '25MB'
+          memory: '35MB'
+        reservations:
+          cpus: '0.01'
+          memory: '35MB'
   
   warmup:
     image: curlimages/curl:latest
