--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,7 @@
 x-enviromments: &x-enviromments
-  - SQLITE_PATH: "/dev/shm/database.sqlite3?sync=off&journal_mode=WAL&busy_timeout=1000&cache_size=100000"
   - AMQP_URL: "amqp://guest:guest@lavinmq:5672/"
-  - BATCH_INTERVAL: "50"
   - PREFETCH_COUNT: "0"
   - SHARD_COUNT: "1"
-  - SKIP_DELAY: "true"
   - PROCESSOR_URL: "http://payment-processor-default:8080"
   - FALLBACK_URL: "http://payment-processor-fallback:8080"
   - DISABLE_LOG: "true"
@@ -17,11 +14,7 @@ services:
       context: .
       target: app
     hostname: app1
-    privileged: true
     restart: unless-stopped
-    cap_add:
-      - SYS_ADMIN
-      - SYS_PTRACE
     environment:
       <<: *x-enviromments
       SOCKET_PATH: "/dev/shm/app1.sock"
@@ -61,10 +54,14 @@ services:
   consumer: &consumer
     <<: *app
     hostname: "1"
+    cpu_shares: 3072
     deploy:
       resources:
         limits:
-          cpus: '0.9'
+          cpus: '1'
+          memory: '150MB'
+        reservations:
+          cpus: '1'
           memory: '150MB'
     build:
       context: .
@@ -72,21 +69,6 @@ services:
     depends_on:
       lavinmq:
         condition: service_healthy
-
-  cleanup:
-    image: alpine:latest
-    command: ["/bin/sh", "-c", "rm -rf /dev/shm/*"]
-    ipc: host
-    volumes:
-      - /dev/shm:/dev/shm
-    deploy:
-      resources:
-        limits:
-          cpus: '0.01'
-          memory: '10MB'
-    restart: "no"
-    networks:
-      - backend
 
   lavinmq:
     image: cloudamqp/lavinmq:latest
@@ -97,8 +79,6 @@ services:
       timeout: 10s
       retries: 20
       start_period: 5s
-    depends_on:
-      - cleanup
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -108,6 +88,9 @@ services:
       resources:
         limits:
           cpus: '0.1'
+          memory: '35MB'
+        reservations:
+          cpus: '0.01'
           memory: '35MB'
 
   nginx: # Load Balancer
@@ -129,21 +112,15 @@ services:
         hard: 1000000
     networks:
       - backend
+    cpu_shares: 2048
     deploy:
       resources:
         limits:
           cpus: '0.1'
-          memory: '25MB'
-  
-  warmup:
-    image: curlimages/curl:latest
-    entrypoint: ["/bin/sh", "-c"]
-    command: |
-      curl --fail --max-time 5 http://nginx:9999/payments-summary || true
-    depends_on:
-      - nginx
-    networks:
-      - backend
+          memory: '35MB'
+        reservations:
+          cpus: '0.01'
+          memory: '35MB'
 
 networks:
   backend:
