--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -51,7 +51,7 @@ jobs:
       - uses: grafana/setup-k6-action@v1
 
       - name: Run k6 test
-        run: k6 -q run rinha.js
+        run: k6 -q -e MAX_REQUESTS=550 run rinha.js
       - name: Create Comment MD File
         run: |
           echo "## k6 Test Results" > comment.md
