--- a/nginx.conf
+++ b/nginx.conf
@@ -7,13 +7,14 @@ events {
 }
 
 http {
-    # access_log  off;
-    error_log /dev/null emerg;
+    error_log /dev/null error;
+    #access_log off;
+    access_log /dev/stdout timed if=$non_200;
 
-    log_format timed '$remote_addr - $remote_user [$time_local] '
-                     '"$request" $status $body_bytes_sent '
-                     '$request_time $upstream_response_time $pipe';
-    access_log off;
+    map $status $non_200 {
+        200 0;
+        default 1;
+    }
 
     upstream api {
         server unix:/dev/shm/app1.sock;
