--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -97,7 +97,7 @@ services:
     ipc: host
     image: nginx:latest
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9999/payments-summary"]
+      test: ["CMD", "curl", "-f", "-s", "http://localhost:9999/payments-summary"]
       interval: 10s
       timeout: 3s
       retries: 5
