--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ events {
 http {
     error_log /dev/null error;
     #access_log off;
-    access_log /dev/stdout timed if=$non_200;
+    access_log /dev/stdout combined if=$non_200;
 
     map $status $non_200 {
         200 0;
