--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ events {
 
 http {
     # access_log  off;
-    error_log /var/log/nginx error.log warn;
+    error_log /var/log/nginx/error.log warn;
 
     log_format timed '$remote_addr - $remote_user [$time_local] '
                      '"$request" $status $body_bytes_sent '
