--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,14 +54,17 @@ services:
   consumer: &consumer
     <<: *app
     hostname: "1"
+    environment:
+      <<: *x-enviromments
+      SOCKET_PATH: "/dev/shm/1.sock"
     cpu_shares: 3072
     deploy:
       resources:
         limits:
-          cpus: '1'
+          cpus: '0.9'
           memory: '150MB'
         reservations:
-          cpus: '1'
+          cpus: '0.9'
           memory: '150MB'
     build:
       context: .
@@ -92,6 +95,27 @@ services:
         reservations:
           cpus: '0.1'
           memory: '35MB'
+
+  shm-echo:
+    image: alpine:latest
+    command: ["sh", "-c", "ls -l /dev/shm && echo 'Contents of /dev/shm listed above.'"]
+    restart: no
+    ipc: host
+    depends_on:
+      - app1
+      - app2
+      - consumer
+    networks:
+      - backend
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: '35MB'
+        reservations:
+          cpus: '0.1'
+          memory: '35MB'
+
 
   nginx: # Load Balancer
     ipc: host
