chore(remove-ipc): remove all ipcs

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,13 +20,13 @@ http {
     }
 
     upstream api {
-        server unix:/dev/shm/app1.sock;
-        server unix:/dev/shm/app2.sock;
+        server unix:/shared/sockets/app1.sock;
+        server unix:/shared/sockets/app2.sock;
         keepalive 200;
     }
 
     upstream consumer {
-        server unix:/dev/shm/1.sock;
+        server unix:/shared/sockets/1.sock;
         keepalive 200;
     }
 
