--- a/nginx.conf
+++ b/nginx.conf
@@ -7,22 +7,17 @@ events {
 }
 
 http {
-    # access_log  off;
-    error_log /dev/null emerg;
-
-    log_format timed '$remote_addr - $remote_user [$time_local] '
-                     '"$request" $status $body_bytes_sent '
-                     '$request_time $upstream_response_time $pipe';
+    error_log /dev/null error;
     access_log off;
 
     upstream api {
-        server unix:/dev/shm/app1.sock;
-        server unix:/dev/shm/app2.sock;
+        server unix:/shared/sockets/app1.sock;
+        server unix:/shared/sockets/app2.sock;
         keepalive 200;
     }
 
     upstream consumer {
-        server unix:/dev/shm/1.sock;
+        server unix:/shared/sockets/1.sock;
         keepalive 200;
     }
 
