--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ version: '3.4'
 services:
   app1: &app
     # image: lukas8219/rinha-be-2023-q3:latest
+    user: "1001:1001"
     build:
       context: .
       target: app
@@ -42,6 +43,7 @@ services:
           memory: '50MB'
   app2:
     <<: *app
+    user: "1001:1001"
     environment:
       <<: *x-enviromments
       SOCKET_PATH: "/shared/sockets/app2.sock"
@@ -56,6 +58,7 @@ services:
 
   consumer: &consumer
     <<: *app
+    user: "1001:1001"
     hostname: "1"
     environment:
       <<: *x-enviromments
@@ -103,9 +106,13 @@ services:
 
   nginx: # Load Balancer
     image: nginx:latest
+    user: "1001:1001"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - unix_sockets:/shared/sockets
+      - nginx_cache:/var/cache/nginx
+      - nginx_run:/var/run
+      - nginx_log:/var/log/nginx
     depends_on:
       - app1
       - app2
@@ -130,11 +137,55 @@ services:
           cpus: '0.1'
           memory: '35MB'
 
+  socket-stats:
+    image: alpine:latest
+    depends_on:
+      - nginx
+    volumes:
+      - unix_sockets:/shared/sockets
+    entrypoint: ["/bin/sh", "-c"]
+    restart: no
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: '6MB'
+        reservations:
+          cpus: '0.1'
+          memory: '6MB'
+    command:
+      - |
+        # Wait for nginx to be up by checking the port
+        echo "nginx is up, statting unix socket files:"
+        stat /shared/sockets/* || echo "No socket files found"
+
 
 
 volumes:
   unix_sockets:
     driver: local
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+      o: "uid=1001,gid=1001,mode=0777"
+  nginx_cache:
+    driver: local
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+      o: "uid=1001,gid=1001,mode=0755"
+  nginx_run:
+    driver: local
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+      o: "uid=1001,gid=1001,mode=0755"
+  nginx_log:
+    driver: local
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+      o: "uid=1001,gid=1001,mode=0755"
 
 networks:
   backend:
