--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,11 +16,10 @@ services:
       target: app
     hostname: app1
     restart: unless-stopped
+    ipc: host
     environment:
       <<: *x-enviromments
-      SOCKET_PATH: "/shared/sockets/app1.sock"
-    volumes:
-      - unix_sockets:/shared/sockets
+      SOCKET_PATH: "/dev/shm/app1.sock"
     networks:
       - backend
       - payment-processor
@@ -44,11 +43,10 @@ services:
   app2:
     <<: *app
     user: "1001:1001"
+    ipc: host
     environment:
       <<: *x-enviromments
-      SOCKET_PATH: "/shared/sockets/app2.sock"
-    volumes:
-      - unix_sockets:/shared/sockets
+      SOCKET_PATH: "/dev/shm/app2.sock"
     hostname: app2
     depends_on:
       lavinmq:
@@ -60,19 +58,19 @@ services:
     <<: *app
     user: "1001:1001"
     hostname: "1"
+    ipc: host
+    cpuset: "0"
     environment:
       <<: *x-enviromments
-      SOCKET_PATH: "/shared/sockets/1.sock"
-    volumes:
-      - unix_sockets:/shared/sockets
+      SOCKET_PATH: "/dev/shm/1.sock"
     cpu_shares: 3072
     deploy:
       resources:
         limits:
-          cpus: '0.9'
+          cpus: '1'
           memory: '150MB'
         reservations:
-          cpus: '0.9'
+          cpus: '1'
           memory: '150MB'
     build:
       context: .
@@ -107,9 +105,9 @@ services:
   nginx: # Load Balancer
     image: nginx:latest
     user: "1001:1001"
+    ipc: host
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - unix_sockets:/shared/sockets
       - nginx_cache:/var/cache/nginx
       - nginx_run:/var/run
       - nginx_log:/var/log/nginx
@@ -128,6 +126,7 @@ services:
     networks:
       - backend
     cpu_shares: 2048
+    cpuset: "1"
     deploy:
       resources:
         limits:
@@ -136,38 +135,8 @@ services:
         reservations:
           cpus: '0.1'
           memory: '35MB'
-
-  socket-stats:
-    image: alpine:latest
-    depends_on:
-      - nginx
-    volumes:
-      - unix_sockets:/shared/sockets
-    entrypoint: ["/bin/sh", "-c"]
-    restart: no
-    deploy:
-      resources:
-        limits:
-          cpus: '0.1'
-          memory: '6MB'
-        reservations:
-          cpus: '0.1'
-          memory: '6MB'
-    command:
-      - |
-        # Wait for nginx to be up by checking the port
-        echo "nginx is up, statting unix socket files:"
-        stat /shared/sockets/* || echo "No socket files found"
-
-
 
 volumes:
-  unix_sockets:
-    driver: local
-    driver_opts:
-      type: tmpfs
-      device: tmpfs
-      o: "uid=1001,gid=1001,mode=0777"
   nginx_cache:
     driver: local
     driver_opts:
