--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,9 +16,29 @@ env:
   IMAGE_NAME: lukas8219/rinha-de-backend-2025
 
 jobs:
+  validate-ssh-key:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Setup SSH Agent
+        uses: webfactory/ssh-agent@v0.9.1
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Test SSH connection to GitHub
+        run: |
+          echo "Testing SSH connection to GitHub..."
+          ssh -T git@github.com || true
+          
+          echo "Testing SSH connection to fork repository..."
+          ssh -T git@github.com 2>&1 | grep -q "successfully authenticated" && echo "✅ SSH key is valid for GitHub" || {
+            echo "❌ SSH key validation failed"
+            exit 1
+          }
+
   build-and-push:
     runs-on: ubuntu-latest
-
+    needs: validate-ssh-key
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -62,7 +82,7 @@ jobs:
 
   update-fork:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: [validate-ssh-key, build-and-push]
     
     steps:
       - name: Checkout current repository
